--- a/templated-binary-test/assets/css/main.css
+++ b/templated-binary-test/assets/css/main.css
@@ -3304,20 +3304,42 @@
 
 /* Banner */
 
-	#banner {
-		background-color: #3498db;
-		color: rgba(255, 255, 255, 0.75);
-		text-align: center;
-		cursor: default;
-		padding: 10em 4em 9em 4em;
-	}
+#banner {
+display: -ms-flexbox;
+-ms-flex-pack: center;
+-ms-flex-align: center;
+padding: 8em 0 6em 0;
+-moz-align-items: center;
+-webkit-align-items: center;
+-ms-align-items: center;
+align-items: center;
+display: -moz-flex;
+display: -webkit-flex;
+display: -ms-flex;
+display: flex;
+-moz-justify-content: center;
+-webkit-justify-content: center;
+-ms-justify-content: center;
+justify-content: center;
+background-image: url("../../images/國家歌劇院.jpg");
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+border-top: 0;
+min-height: 100vh;
+height: 100vh !important;
+position: relative;
+text-align: center;
+overflow: hidden;
+}
+
 
 		#banner input, #banner select, #banner textarea {
-			color: #fff;
+			color: #000000;
 		}
 
 		#banner a {
-			color: #fff;
+			color: #000000;
 		}
 
 		#banner strong, #banner b {
@@ -3325,7 +3347,7 @@
 		}
 
 		#banner h1, #banner h2, #banner h3, #banner h4, #banner h5, #banner h6 {
-			color: #fff;
+			color: #000000;
 		}
 
 		#banner blockquote {
