--- a/templated-binary-test/assets/css/main.css
+++ b/templated-binary-test/assets/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic");
-
+@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans');
 /*
 	Binary by TEMPLATED
 	templated.co @templatedco
@@ -2621,212 +2621,226 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #fff;
-			color: #444;
-		}
-
-			.wrapper.style1 input, .wrapper.style1 select, .wrapper.style1 textarea {
-				color: #1abc9c;
-			}
-
-			.wrapper.style1 a {
-				color: #1abc9c;
-			}
-
-			.wrapper.style1 strong, .wrapper.style1 b {
-				color: #1abc9c;
-			}
-
-			.wrapper.style1 h1, .wrapper.style1 h2, .wrapper.style1 h3, .wrapper.style1 h4, .wrapper.style1 h5, .wrapper.style1 h6 {
-				color: #1abc9c;
-			}
-
-			.wrapper.style1 blockquote {
-				border-left-color: rgba(144, 144, 144, 0.25);
-			}
-
-			.wrapper.style1 code {
-				background: rgba(144, 144, 144, 0.075);
-				border-color: rgba(144, 144, 144, 0.25);
-			}
-
-			.wrapper.style1 hr {
-				border-bottom-color: rgba(144, 144, 144, 0.25);
-			}
-
-			.wrapper.style1 .box {
-				border-color: rgba(144, 144, 144, 0.25);
-			}
-
-			.wrapper.style1 input[type="submit"],
-			.wrapper.style1 input[type="reset"],
-			.wrapper.style1 input[type="button"],
-			.wrapper.style1 button,
-			.wrapper.style1 .button {
-				background-color: #1abc9c;
-				color: #fff !important;
-			}
-
-				.wrapper.style1 input[type="submit"]:hover,
-				.wrapper.style1 input[type="reset"]:hover,
-				.wrapper.style1 input[type="button"]:hover,
-				.wrapper.style1 button:hover,
-				.wrapper.style1 .button:hover {
-					background-color: #1dd2af;
+					background-color: #fafafa;
+					color: #999999;
+					background-image: url("../../images/雪山.jpg") ;
+					background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		border-top: 0;
+		min-height: 100vh;
+		height: 100vh !important;
+		position: relative;
+		text-align: center;
+		overflow: hidden;
 				}
 
-				.wrapper.style1 input[type="submit"]:active,
-				.wrapper.style1 input[type="reset"]:active,
-				.wrapper.style1 input[type="button"]:active,
-				.wrapper.style1 button:active,
-				.wrapper.style1 .button:active {
-					background-color: #17a689;
-				}
-
-				.wrapper.style1 input[type="submit"].alt,
-				.wrapper.style1 input[type="reset"].alt,
-				.wrapper.style1 input[type="button"].alt,
-				.wrapper.style1 button.alt,
-				.wrapper.style1 .button.alt {
-					background-color: transparent;
-					box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
-					color: #1abc9c !important;
-				}
-
-					.wrapper.style1 input[type="submit"].alt:hover,
-					.wrapper.style1 input[type="reset"].alt:hover,
-					.wrapper.style1 input[type="button"].alt:hover,
-					.wrapper.style1 button.alt:hover,
-					.wrapper.style1 .button.alt:hover {
-						background-color: rgba(144, 144, 144, 0.075);
+					.wrapper.style1 input, .wrapper.style1 select, .wrapper.style1 textarea {
+						color: #000;
 					}
 
-					.wrapper.style1 input[type="submit"].alt:active,
-					.wrapper.style1 input[type="reset"].alt:active,
-					.wrapper.style1 input[type="button"].alt:active,
-					.wrapper.style1 button.alt:active,
-					.wrapper.style1 .button.alt:active {
-						background-color: rgba(144, 144, 144, 0.2);
+					.wrapper.style1 a {
+						color: #000;
 					}
 
-					.wrapper.style1 input[type="submit"].alt.icon:before,
-					.wrapper.style1 input[type="reset"].alt.icon:before,
-					.wrapper.style1 input[type="button"].alt.icon:before,
-					.wrapper.style1 button.alt.icon:before,
-					.wrapper.style1 .button.alt.icon:before {
-						color: #bbb;
+						.wrapper.style1 a:hover {
+							color: rgba(0, 0, 0, 0.5);
+						}
+
+					.wrapper.style1 strong, .wrapper.style1 b {
+						color: #000;
 					}
 
-				.wrapper.style1 input[type="submit"].special,
-				.wrapper.style1 input[type="reset"].special,
-				.wrapper.style1 input[type="button"].special,
-				.wrapper.style1 button.special,
-				.wrapper.style1 .button.special {
-					background-color: #1abc9c;
-					color: #fff !important;
-				}
+					.wrapper.style1 h1, .wrapper.style1 h2, .wrapper.style1 h3, .wrapper.style1 h4, .wrapper.style1 h5, .wrapper.style1 h6 {
+						color: #000;
+					}
 
-			.wrapper.style1 label {
-				color: #1abc9c;
-			}
+					.wrapper.style1 blockquote {
+						border-left-color: rgba(0, 0, 0, 0.15);
+					}
 
-			.wrapper.style1 input[type="text"],
-			.wrapper.style1 input[type="password"],
-			.wrapper.style1 input[type="email"],
-			.wrapper.style1 select,
-			.wrapper.style1 textarea {
-				background: rgba(144, 144, 144, 0.075);
-				border-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 code {
+						background: rgba(0, 0, 0, 0.075);
+						border-color: rgba(0, 0, 0, 0.15);
+					}
 
-				.wrapper.style1 input[type="text"]:focus,
-				.wrapper.style1 input[type="password"]:focus,
-				.wrapper.style1 input[type="email"]:focus,
-				.wrapper.style1 select:focus,
-				.wrapper.style1 textarea:focus {
-					border-color: #1abc9c;
-					box-shadow: 0 0 0 1px #1abc9c;
-				}
+					.wrapper.style1 hr {
+						border-bottom-color: rgba(0, 0, 0, 0.15);
+					}
 
-			.wrapper.style1 .select-wrapper:before {
-				color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 .box {
+						border-color: rgba(0, 0, 0, 0.15);
+					}
 
-			.wrapper.style1 input[type="checkbox"] + label,
-			.wrapper.style1 input[type="radio"] + label {
-				color: #444;
-			}
+					.wrapper.style1 input[type="submit"],
+					.wrapper.style1 input[type="reset"],
+					.wrapper.style1 input[type="button"],
+					.wrapper.style1 button,
+					.wrapper.style1 .button {
+						background-color: #3498db;
+						color: #fff !important;
+					}
 
-				.wrapper.style1 input[type="checkbox"] + label:before,
-				.wrapper.style1 input[type="radio"] + label:before {
-					background: rgba(144, 144, 144, 0.075);
-					border-color: rgba(144, 144, 144, 0.25);
-				}
+						.wrapper.style1 input[type="submit"]:hover,
+						.wrapper.style1 input[type="reset"]:hover,
+						.wrapper.style1 input[type="button"]:hover,
+						.wrapper.style1 button:hover,
+						.wrapper.style1 .button:hover {
+							background-color: #4aa3df;
+						}
 
-			.wrapper.style1 input[type="checkbox"]:checked + label:before,
-			.wrapper.style1 input[type="radio"]:checked + label:before {
-				background-color: #1abc9c;
-				border-color: #1abc9c;
-				color: #fff;
-			}
+						.wrapper.style1 input[type="submit"]:active,
+						.wrapper.style1 input[type="reset"]:active,
+						.wrapper.style1 input[type="button"]:active,
+						.wrapper.style1 button:active,
+						.wrapper.style1 .button:active {
+							background-color: #258cd1;
+						}
 
-			.wrapper.style1 input[type="checkbox"]:focus + label:before,
-			.wrapper.style1 input[type="radio"]:focus + label:before {
-				border-color: #1abc9c;
-				box-shadow: 0 0 0 1px #1abc9c;
-			}
+						.wrapper.style1 input[type="submit"].alt,
+						.wrapper.style1 input[type="reset"].alt,
+						.wrapper.style1 input[type="button"].alt,
+						.wrapper.style1 button.alt,
+						.wrapper.style1 .button.alt {
+							background-color: transparent;
+							box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.15);
+							color: #000 !important;
+						}
 
-			.wrapper.style1 ::-webkit-input-placeholder {
-				color: #bbb !important;
-			}
+							.wrapper.style1 input[type="submit"].alt:hover,
+							.wrapper.style1 input[type="reset"].alt:hover,
+							.wrapper.style1 input[type="button"].alt:hover,
+							.wrapper.style1 button.alt:hover,
+							.wrapper.style1 .button.alt:hover {
+								background-color: rgba(0, 0, 0, 0.075);
+							}
 
-			.wrapper.style1 :-moz-placeholder {
-				color: #bbb !important;
-			}
+							.wrapper.style1 input[type="submit"].alt:active,
+							.wrapper.style1 input[type="reset"].alt:active,
+							.wrapper.style1 input[type="button"].alt:active,
+							.wrapper.style1 button.alt:active,
+							.wrapper.style1 .button.alt:active {
+								background-color: rgba(0, 0, 0, 0.2);
+							}
 
-			.wrapper.style1 ::-moz-placeholder {
-				color: #bbb !important;
-			}
+							.wrapper.style1 input[type="submit"].alt.icon:before,
+							.wrapper.style1 input[type="reset"].alt.icon:before,
+							.wrapper.style1 input[type="button"].alt.icon:before,
+							.wrapper.style1 button.alt.icon:before,
+							.wrapper.style1 .button.alt.icon:before {
+								color: #bfbfbf;
+							}
 
-			.wrapper.style1 :-ms-input-placeholder {
-				color: #bbb !important;
-			}
+						.wrapper.style1 input[type="submit"].special,
+						.wrapper.style1 input[type="reset"].special,
+						.wrapper.style1 input[type="button"].special,
+						.wrapper.style1 button.special,
+						.wrapper.style1 .button.special {
+							background-color: #000;
+							color: #fafafa !important;
+						}
 
-			.wrapper.style1 .formerize-placeholder {
-				color: #bbb !important;
-			}
+					.wrapper.style1 label {
+						color: #000;
+					}
 
-			.wrapper.style1 ul.alt li {
-				border-top-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 input[type="text"],
+					.wrapper.style1 input[type="password"],
+					.wrapper.style1 input[type="email"],
+					.wrapper.style1 select,
+					.wrapper.style1 textarea {
+						background: rgba(0, 0, 0, 0.075);
+						border-color: rgba(0, 0, 0, 0.15);
+					}
 
-			.wrapper.style1 header p {
-				color: #bbb;
-			}
+						.wrapper.style1 input[type="text"]:focus,
+						.wrapper.style1 input[type="password"]:focus,
+						.wrapper.style1 input[type="email"]:focus,
+						.wrapper.style1 select:focus,
+						.wrapper.style1 textarea:focus {
+							border-color: #000;
+							box-shadow: 0 0 0 1px #000;
+						}
 
-			.wrapper.style1 table tbody tr {
-				border-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 .select-wrapper:before {
+						color: rgba(0, 0, 0, 0.15);
+					}
 
-				.wrapper.style1 table tbody tr:nth-child(2n + 1) {
-					background-color: rgba(144, 144, 144, 0.075);
-				}
+					.wrapper.style1 input[type="checkbox"] + label,
+					.wrapper.style1 input[type="radio"] + label {
+						color: #999999;
+					}
 
-			.wrapper.style1 table th {
-				color: #1abc9c;
-			}
+						.wrapper.style1 input[type="checkbox"] + label:before,
+						.wrapper.style1 input[type="radio"] + label:before {
+							background: rgba(0, 0, 0, 0.075);
+							border-color: rgba(0, 0, 0, 0.15);
+						}
 
-			.wrapper.style1 table thead {
-				border-bottom-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 input[type="checkbox"]:checked + label:before,
+					.wrapper.style1 input[type="radio"]:checked + label:before {
+						background-color: #000;
+						border-color: #000;
+						color: #fafafa;
+					}
 
-			.wrapper.style1 table tfoot {
-				border-top-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 input[type="checkbox"]:focus + label:before,
+					.wrapper.style1 input[type="radio"]:focus + label:before {
+						border-color: #000;
+						box-shadow: 0 0 0 1px #000;
+					}
 
-			.wrapper.style1 table.alt tbody tr td {
-				border-color: rgba(144, 144, 144, 0.25);
-			}
+					.wrapper.style1 ::-webkit-input-placeholder {
+						color: #bfbfbf !important;
+					}
+
+					.wrapper.style1 :-moz-placeholder {
+						color: #bfbfbf !important;
+					}
+
+					.wrapper.style1 ::-moz-placeholder {
+						color: #bfbfbf !important;
+					}
+
+					.wrapper.style1 :-ms-input-placeholder {
+						color: #bfbfbf !important;
+					}
+
+					.wrapper.style1 .formerize-placeholder {
+						color: #bfbfbf !important;
+					}
+
+					.wrapper.style1 ul.alt li {
+						border-top-color: rgba(0, 0, 0, 0.15);
+					}
+
+					.wrapper.style1 header p {
+						color: #bfbfbf;
+					}
+
+					.wrapper.style1 table tbody tr {
+						border-color: rgba(0, 0, 0, 0.15);
+					}
+
+						.wrapper.style1 table tbody tr:nth-child(2n + 1) {
+							background-color: rgba(0, 0, 0, 0.075);
+						}
+
+					.wrapper.style1 table th {
+						color: #000;
+					}
+
+					.wrapper.style1 table thead {
+						border-bottom-color: rgba(0, 0, 0, 0.15);
+					}
+
+					.wrapper.style1 table tfoot {
+						border-top-color: rgba(0, 0, 0, 0.15);
+					}
+
+					.wrapper.style1 table.alt tbody tr td {
+						border-color: rgba(0, 0, 0, 0.15);
+					}
 
 		.wrapper.style2 {
 			background-color: #fff;
